syntax = "proto3";

package transaction;

option java_package = "com.proto.transaction";
option java_multiple_files = true;

message Transaction {
  string name = 1;
  string mobileNumber = 2;
  int32 amount = 3;
  string email = 4;
}

message TransactionRequest {
  Transaction transaction = 1;
}

message TransactionResponse {
  string status = 1;
  int64 balanceAmount = 2;
}

service TransactionService {
  rpc transact(TransactionRequest) returns (TransactionResponse) {};
}

